# YouMustClean

./: .gitignore  .gitmodules  README.md  TODO.md  cmake_opencv4_flags.txt
WallpaperGenerator/: CMakeLists.txt  Cargo.toml  README.md  WallpaperGenerator.cpp  run.sh  settings.json
WallpaperGenerator/include/: ConfigParser.hpp  DataTypes.hpp  Renderer.hpp  WallpaperSynthesis.hpp
WallpaperGenerator/src/: ConfigParser.cpp  DataTypes.cpp  Renderer.cpp  WallpaperSynthesis.cpp
WallpaperGenerator/templates/: template_group_list.csv  template_layout-config.toml  template_script.lua  template_wallpaper_configuration.toml
WindowsDaemon/: Program.cs  README.md  WindowsDaemon.cs  WindowsDaemon.csproj
